# valueinvest

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  analyze_yili.py  pyproject.toml  roadmap.md  stock_analyzer.py  test_sbc.py
.github/workflows/: publish.yml
demos/: UNDervalUED_STOCKS_GUIDE.md  demo_screening.py  generate_600704_report.py
docs/: quick_reference.md
examples/: cyclical_example.py  debug_fetch.py  demo_mock.py  find_undervalued_stocks.py  generate_analysis_data.py
learn/: dcf_valuation_tutorial.ipynb  owner_earnings_tutorial.ipynb
reports/: 价值投资估值方法论总纲.md  估值方法深度调研报告.md
reports/600309/: 2026-02-19_600309_analysis.md
reports/GOOG/: 2026-02-18_google_analysis.md
reports/KO/: 2026-02-20_ko_analysis.md
scripts/: analyze.py  analyze_600026_cyclical.py  analyze_600096.py  analyze_603379.py  analyze_cyclical_stock.py  analyze_tesla.py  cyclical_reporter.py  extract_sp100_data.py  extract_sp100_final.py  extract_sp100_simple.py  extract_sp100_v2.py  fetch_stock_data.py  sp100.md  stock_analyzer.py  us_robot_analysis.py
tests/: test_capital_allocation.py  test_cyclical.py  test_cyclical_fixed.py  test_fetcher.py  test_implied_growth.py  test_industry.py  test_moat.py  test_news.py  test_peer_comparison.py  test_phase1.py  test_redflags.py  test_roic.py  test_valuation_p0.py  test_value_trap.py
valueinvest/: __init__.py  exceptions.py  stock.py
valueinvest/buyback/: __init__.py  base.py  registry.py
valueinvest/capital/: __init__.py  base.py  engine.py  signals.py
valueinvest/cashflow/: __init__.py  base.py  registry.py
valueinvest/cyclical/: README.md  __init__.py  base.py  engine.py  enums.py  position_scorer.py
valueinvest/data/: __init__.py  freshness.py  presets.py
valueinvest/implied_growth/: __init__.py  analyzer.py  base.py  engine.py
valueinvest/industry/: __init__.py  base.py  registry.py
valueinvest/insider/: __init__.py  base.py  registry.py
valueinvest/moat/: __init__.py  base.py  engine.py  signals.py
valueinvest/news/: __init__.py  base.py  registry.py
valueinvest/peer_comparison/: __init__.py  base.py  engine.py
valueinvest/redflags/: __init__.py  base.py  engine.py  signals.py
valueinvest/reports/: enhanced_reporter.py  reporter.py
valueinvest/roic/: __init__.py  base.py  engine.py  roic.py  wacc.py
(+65 files in other folders)
