[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valueinvest"
version = "0.1.0"
description = "A modular Python library for comprehensive stock valuation using multiple methodologies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ValueInvest Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
us = ["yfinance>=0.2.0"]
ashare = ["akshare>=1.10.0", "pandas>=2.0.0"]
tushare = ["tushare>=1.3.0", "pandas>=2.0.0"]
fetch = ["yfinance>=0.2.0", "akshare>=1.10.0", "pandas>=2.0.0", "requests-cache>=1.0.0"]
dev = ["pytest>=7.0.0", "mypy>=1.0.0", "ruff>=0.1.0"]
all = [
    "yfinance>=0.2.0",
    "akshare>=1.10.0",
    "tushare>=1.3.0",
    "pandas>=2.0.0",
    "requests-cache>=1.0.0",
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/valueinvest"
Documentation = "https://github.com/your-repo/valueinvest#readme"
Repository = "https://github.com/your-repo/valueinvest"

[tool.hatch.build.targets.wheel]
packages = ["valueinvest"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "akshare.*", "tushare.*", "pandas.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
